# onnx-fhe-runtime

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
example/: cifar-inference.py  cifar_mlp_model.onnx  fhe-mlp-cifar10.onnx  fhe-svm-linear.onnx  fhe-svm-rbf.onnx  inference.py  model.py  onnx-cifar.py  onnx-svm-fhe.py  onnx-svm.py  svm-inference.py  svm_linear.onnx  svm_rbf.onnx
src/: CMakeLists.txt  fhe.cpp  init.cpp
src/operators/: helper.h  operators.h
src/operators/ckks/: add.cpp  add.h  matmul.cpp  matmul.h  serialize.cpp  serialize.h  square.cpp  square.h  svm.cpp  svm.h
src/registry/: registry.cpp  registry.h
src/tools/: rndstr.cpp  tools.h
